# malayalam-stroker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  vitest.config.js
.github/workflows/: ci.yml  pages.yml  publish.yml  release-on-merge.yml
demo/: demo.css  demo.js  demo_index.html  index.html  logo-preview.html  serve.py
docs/: CENTERING_EXPERIMENTS.md  ROADMAP.md
js/: LICENSE  README.md  package.json
js/examples/: demo.html  sample-trace.json
js/src/: index.js  stroke-data-snapped.json  stroke-data.json  style.css
python/: README.md  poetry.toml  pyproject.toml
python/examples/: shape_and_render.py
python/src/jayasree/: __init__.py
python/src/malayalam_stroker/: __init__.py  __main__.py  _chars.py  centering.py  cli.py  geometry.py  ghost_reference.py  stroke_compose.py  strokes.py
python/tests/: test_centering.py  test_chars_malayalam.py  test_cli.py  test_data_snapshot.py  test_geometry.py  test_ghost_reference.py  test_stroke_compose.py  test_strokes.py  test_validate_data.py
python/tests/fixtures/: README.md
python/tests/snapshots/: stroke_data_raw_snapshot.json
tests/: composition-coverage.test.js  index.test.js
tools/: CENTERING_EXPERIMENTS.md  build_glyph_data.py  build_standalone_recorder.py  process_strokes.py  snap_strokes.py  stroke-recorder.css  stroke-recorder.html  stroke-recorder.js  validate_data.py
