[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "malayalam-stroker"
version = "0.1.0"
description = "Shape Malayalam text and extract per-glyph SVG stroke paths for stroke-order / handwriting-trace widgets"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "your-name-here" }]
keywords = ["malayalam", "stroke-order", "handwriting", "harfbuzz", "svg", "indic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Fonts",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "fonttools>=4.62",
    "uharfbuzz>=0.55",
    "svgpathtools (>=1.7.2,<2.0.0)",
    "numpy>=1.26",
    "scipy>=1.11",
    "pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/your-username/malayalam-stroker"
Repository = "https://github.com/your-username/malayalam-stroker"

[project.scripts]
malayalam-stroker = "malayalam_stroker.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/malayalam_stroker"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "N",   # pep8-naming
    "ANN", # annotations
    "RUF", # ruff-specific
]
ignore = [
    "D205",   # blank-line-after-summary — conflicts with NumPy 1-liner style
    "D415",   # ends-with-period
    "ANN101", # missing self annotation
    "ANN102", # missing cls annotation
    "ANN401", # Any type allowed in some positions
    "E999",   # syntax-error — false positives on multi-line docstrings
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["malayalam_stroker"]

[tool.interrogate]
fail-under = 90
ignore-init-module = true
ignore-magic = true
style = "numpy"
verbose = 0

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.6.0"
interrogate = "^1.7.0"

