[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jayasree"
version = "0.4.0"
description = "Shape Malayalam text and extract per-glyph SVG stroke paths for stroke-order / handwriting-trace widgets"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Sachin Nandakumar" }]
keywords = ["malayalam", "stroke-order", "handwriting", "harfbuzz", "svg", "indic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Fonts",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "fonttools>=4.62",
    "uharfbuzz>=0.55",
    "svgpathtools (>=1.7.2,<2.0.0)",
    "numpy>=1.26",
    "scipy>=1.11",
    "pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/sachn1/jayasree"
Repository = "https://github.com/sachn1/jayasree"

[project.scripts]
jayasree = "jayasree.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jayasree"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=jayasree --cov-report=term-missing"

[tool.coverage.run]
source = ["src/jayasree"]


# ruff config lives in the repo-root pyproject.toml (not this file) - see
# that file's header comment for why.

[tool.interrogate]
# NumPy docstring format is enforced by ruff's pydocstyle convention above -
# interrogate only measures presence/coverage, and its own --style option
# (sphinx/google) doesn't support "numpy" at all; setting it crashed every
# pre-commit run with "Invalid value for '--style'".
fail-under = 90
ignore-init-module = true
ignore-magic = true
verbose = 0

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.6.0"
interrogate = "^1.7.0"
pytest = "^9.1"
pytest-cov = "^7.1"
ruff = "0.15.22"  # pinned to match .pre-commit-config.yaml's ruff-pre-commit rev
# python marker only because commitizen declares <4.0 and this project doesn't
commitizen = { version = "^4.16", python = "<4.0" }

